// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`vector math operator emit v.add(other) emits native Lua + (no userland helper) 1`] = `
"--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
function ____exports.go(self)
    local a = vmath.vector3(1, 2, 3)
    local b = vmath.vector3(4, 5, 6)
    return a + b
end
return ____exports
"
`;

exports[`vector math operator emit v.unm() emits Lua unary minus 1`] = `
"--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
function ____exports.go(self)
    local a = vmath.vector3(1, 2, 3)
    return -a
end
return ____exports
"
`;

exports[`vector math operator emit m.mul(v4) emits Lua * 1`] = `
"--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
function ____exports.go(self)
    local m = vmath.matrix4()
    local v = vmath.vector4(1, 2, 3, 4)
    return m * v
end
return ____exports
"
`;
